Implement custom exception when reading File directory for RFC files